Added navbar in header in body

--- a/Welcome.html
+++ b/Welcome.html
@@ -2,8 +2,42 @@
 
 <html lang="en">
   <head>
-  
+  <link rel="stylesheet" href="bootstrap-custom.css">
+  <link rel="stylesheet" href="bootstrap-main.css">
+  <title>Mike Opolski</title>
   </head>
-  
-  
-  
+  <body>
+    <header>
+      <div class="main-header hide-on-mobile"></div> <!--Main Menu-->
+      <nav class="navbar main-menu hide-on-mobile">
+        <div class="container">
+          <ul class="nav nav=justified">
+            <li class="dropdown">
+              <a href="####">Mike Opolski</a>
+            </li>
+            <li class="dropdown">
+              <a>Education</a>
+            </li> <!--Education-->
+            <li class="dropdown">
+              <a>Experience</a>
+              <div class="nav-content">
+                <ul class="dropdown-menu" role="menu">
+                  <li>
+                    <a href="####">Sage ATC Environmental Consulting</a>
+                  </li>
+                  <li>
+                    <a href="####">Eastman Chemical Company</a>
+                  </li>
+                </ul>
+              </div>
+            </li> <!--Experience-->
+            <li class="dropdown">
+              <a>Contact</a>
+            </li> <!--Contact-->
+          </ul>
+        </div>
+      </nav> <!--Navbar-->
+      <div class="menu-mobile"></div> <!--Mobile Menu-->
+    </header>
+  </body>
+</html>
